@@ -1,5 +1,10 @@
 devscripts (2.10.46) UNRELEASED; urgency=low
 
+  * bts:
+    + If the debbugs host in use is bugs(-*).d.o, use bugs-master.d.o when
+      reporting spam to match recent changes to the BTS.
+    + If -n / --no-action was given on the command line, print the URL that
+      would have been used to report spam rather than sending the report.
   * README.newscripts: Correct the "svn propset" syntax added in the previous
     upload.
 
